--- a/jupyterhub.yaml
+++ b/jupyterhub.yaml
@@ -12,6 +12,9 @@ singleuser:
         mountPath: /home/shared
   cpu:
     guarantee: 1
+  cmd: jupyterhub-singleuser --notebook-dir=/home
 proxy:
   service:
     type: ClusterIP
+
+  #--notebook-dir=/home
