--- a/argo-workflows.yaml
+++ b/argo-workflows.yaml
@@ -1,2 +1,11 @@
 server:
   authModes: ["server"]
+workflow:
+  serviceAccount:
+    create: true
+    name: "argo-workflow"
+  rbac:
+    create: true
+controller:
+  workflowNamespaces:
+    - default
