--- a/grafana.yaml
+++ b/grafana.yaml
@@ -35,3 +35,14 @@ datasources:
      type: prometheus
      url: http://prometheus-server.monitoring.svc.cluster.local
      access: proxy
+dashboards: {
+  default:
+    DCGM:
+      gnetId: 12239
+      revision: 2
+      datasource: Prometheus
+    NodeExporter:
+      gnetId: 12558
+      revision: 2
+      datasource: Prometheus
+}
