--- a/grafana-agent.yaml
+++ b/grafana-agent.yaml
@@ -54,6 +54,22 @@ agent:
               url = "http://prometheus-server/api/v1/write"
           }
       }
+      discovery.kubernetes "local_pods" {
+        selectors {
+          field = "spec.nodeName=" + env("HOSTNAME")
+          role = "pod"
+        }
+        role = "pod"
+      }
+      pyroscope.ebpf "instance" {
+        forward_to = [pyroscope.write.endpoint.receiver]
+        targets = discovery.kubernetes.local_pods.targets
+      }
+      pyroscope.write "endpoint" {
+        endpoint {
+          url = "http://pyroscope/api/v1/write"
+        }
+      }
 
     # -- Name of existing ConfigMap to use. Used when create is false.
     name: null
@@ -114,7 +130,10 @@ agent:
     extra: []
 
   # -- Security context to apply to the Grafana Agent container.
-  securityContext: {}
+  securityContext:
+      privileged: true
+      runAsGroup: 0
+      runAsUser: 0
 
   # -- Resource requests and limits to apply to the Grafana Agent container.
   resources: {}
@@ -191,7 +210,7 @@ controller:
   hostNetwork: false
 
   # -- Configures Pods to use the host PID namespace.
-  hostPID: false
+  hostPID: true
 
   # -- Configures the DNS policy for the pod. https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy
   dnsPolicy: ClusterFirst
